--- a/app/src/main/res/layout/bookinfo.xml
+++ b/app/src/main/res/layout/bookinfo.xml
@@ -24,7 +24,9 @@
         android:background="#ffffff"
         android:textSize="15dp"
         android:layout_marginTop="10px"
-        android:gravity="center_vertical" />
+        android:gravity="center_vertical"
+        android:paddingLeft="20dp"
+        android:paddingRight="20dp" />
 
     <LinearLayout
         android:orientation="horizontal"
