--- a/app/src/main/res/layout/activity_login__page.xml
+++ b/app/src/main/res/layout/activity_login__page.xml
@@ -3,10 +3,92 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="cn.a1949science.www.bookshare.Login_Page">
+    tools:context="cn.a1949science.www.bookshare.Login_Page"
+    android:gravity="center_horizontal">
+
+
+
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="300dp"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/linearLayout13"
+        android:layout_alignLeft="@+id/linearLayout13"
+        android:layout_alignStart="@+id/linearLayout13">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:layout_marginTop="2.0dip"
+            android:padding="10.0dip"
+            android:text="+86"
+            android:id="@+id/textView23" />
+
+        <EditText
+            android:layout_width="300dp"
+            android:layout_height="55dp"
+            android:ems="10"
+            android:id="@+id/phoneNum"
+            android:hint="请输入手机号"
+            android:paddingLeft="16dp"
+            android:selectAllOnFocus="true"
+            android:inputType="phone"
+            android:layout_weight="1" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="300dp"
+        android:layout_height="wrap_content"
+        android:weightSum="1"
+        android:layout_above="@+id/login"
+        android:layout_alignLeft="@+id/login"
+        android:layout_alignStart="@+id/login"
+        android:id="@+id/linearLayout13"
+        android:layout_marginBottom="50dp">
+
+        <EditText
+            android:layout_width="185dp"
+            android:layout_height="55dp"
+            android:ems="10"
+            android:id="@+id/code"
+            android:hint="请输入验证码"
+            android:paddingLeft="16dp"
+            android:selectAllOnFocus="true"
+            android:layout_centerHorizontal="true"
+            android:layout_weight="1"
+            android:inputType="number" />
+
+        <Button
+            style="?android:attr/buttonStyleSmall"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="获取验证码"
+            android:id="@+id/getCode"
+            android:textSize="15sp"
+            android:layout_gravity="right" />
+    </LinearLayout>
+
+    <Button
+        style="?android:attr/buttonStyleSmall"
+        android:layout_width="300dp"
+        android:layout_height="55dp"
+        android:text="登陆"
+        android:id="@+id/login"
+        android:textSize="20dp"
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true" />
+
+    <Button
+        style="?android:attr/buttonStyleSmall"
+        android:layout_width="300dp"
+        android:layout_height="55dp"
+        android:text="注册"
+        android:id="@+id/register"
+        android:textSize="20dp"
+        android:layout_below="@+id/login"
+        android:layout_alignLeft="@+id/login"
+        android:layout_alignStart="@+id/login" />
 
 </RelativeLayout>
