--- a/app/src/main/res/layout/activity_login__page.xml
+++ b/app/src/main/res/layout/activity_login__page.xml
@@ -16,15 +16,6 @@
         android:layout_alignLeft="@+id/linearLayout13"
         android:layout_alignStart="@+id/linearLayout13">
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:layout_marginTop="2.0dip"
-            android:padding="10.0dip"
-            android:text="+86"
-            android:id="@+id/textView23" />
-
         <EditText
             android:layout_width="300dp"
             android:layout_height="55dp"
@@ -34,7 +25,8 @@
             android:paddingLeft="16dp"
             android:selectAllOnFocus="true"
             android:inputType="phone"
-            android:layout_weight="1" />
+            android:layout_weight="1"/>
+
     </LinearLayout>
 
     <LinearLayout
@@ -52,22 +44,14 @@
             android:layout_width="185dp"
             android:layout_height="55dp"
             android:ems="10"
-            android:id="@+id/code"
-            android:hint="请输入验证码"
+            android:id="@+id/password"
+            android:hint="请输入密码"
             android:paddingLeft="16dp"
             android:selectAllOnFocus="true"
             android:layout_centerHorizontal="true"
             android:layout_weight="1"
             android:inputType="number" />
 
-        <Button
-            style="?android:attr/buttonStyleSmall"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="获取验证码"
-            android:id="@+id/getCode"
-            android:textSize="15sp"
-            android:layout_gravity="right" />
     </LinearLayout>
 
     <Button
