--- a/app/src/main/res/layout/activity_login__page.xml
+++ b/app/src/main/res/layout/activity_login__page.xml
@@ -4,7 +4,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="cn.a1949science.www.bookshare.Login_Page"
-    android:gravity="center_horizontal">
+    android:gravity="center_horizontal"
+    android:background="@mipmap/login">
 
 
 
