--- a/app/src/main/res/layout/activity_menu_page.xml
+++ b/app/src/main/res/layout/activity_menu_page.xml
@@ -182,7 +182,7 @@
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:text="退出登录"
-        android:id="@+id/button"
+        android:id="@+id/logout"
         android:background="#ffffff"
         android:layout_marginTop="180dp" />
 
