确定了密码长度，可以第二次免登陆了

--- a/app/src/main/res/layout/activity_login__page.xml
+++ b/app/src/main/res/layout/activity_login__page.xml
@@ -51,7 +51,7 @@
             android:selectAllOnFocus="true"
             android:layout_centerHorizontal="true"
             android:layout_weight="1"
-            android:inputType="number" />
+            android:inputType="textPassword" />
 
     </LinearLayout>
 
