--- a/app/src/main/res/layout/activity_detail__info.xml
+++ b/app/src/main/res/layout/activity_detail__info.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context="cn.a1949science.www.bookshare.Detail_Info"
     android:background="#ebecf0">
 
@@ -29,10 +30,7 @@
         android:background="#ffffff"
         android:gravity="center_vertical|center_horizontal"
         android:id="@+id/linearLayout3"
-        android:layout_below="@+id/linearLayout6"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginTop="2px"
+        android:layout_marginTop="1dp"
         android:paddingLeft="15dp"
         android:paddingRight="10dp">
 
@@ -70,10 +68,7 @@
         android:background="#ffffff"
         android:gravity="center_vertical|center_horizontal"
         android:id="@+id/linearLayout4"
-        android:layout_alignParentStart="true"
-        android:layout_below="@+id/linearLayout5"
-        android:layout_alignParentLeft="true"
-        android:layout_marginTop="2px"
+        android:layout_marginTop="1dp"
         android:paddingLeft="15dp"
         android:paddingRight="10dp">
 
@@ -111,10 +106,7 @@
         android:background="#ffffff"
         android:gravity="center_vertical|center_horizontal"
         android:id="@+id/linearLayout5"
-        android:layout_alignParentStart="true"
-        android:layout_below="@+id/linearLayout3"
-        android:layout_alignParentLeft="true"
-        android:layout_marginTop="2px"
+        android:layout_marginTop="1dp"
         android:paddingLeft="15dp"
         android:paddingRight="10dp">
 
@@ -152,10 +144,7 @@
         android:background="#ffffff"
         android:gravity="center_vertical|center_horizontal"
         android:id="@+id/linearLayout6"
-        android:layout_below="@+id/linearLayout7"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginTop="2px"
+        android:layout_marginTop="1dp"
         android:paddingLeft="15dp"
         android:paddingRight="10dp">
 
@@ -193,10 +182,7 @@
         android:background="#ffffff"
         android:gravity="center_vertical|center_horizontal"
         android:id="@+id/linearLayout7"
-        android:layout_below="@+id/linearLayout8"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginTop="2px"
+        android:layout_marginTop="1dp"
         android:paddingLeft="15dp"
         android:paddingRight="10dp">
 
@@ -234,10 +220,7 @@
         android:background="#ffffff"
         android:gravity="center_vertical|center_horizontal"
         android:id="@+id/linearLayout8"
-        android:layout_below="@+id/relativeLayout3"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginTop="2px"
+        android:layout_marginTop="1dp"
         android:paddingLeft="15dp"
         android:paddingRight="10dp">
 
@@ -267,4 +250,44 @@
             android:id="@+id/imageView18"
             android:src="@drawable/after" />
     </LinearLayout>
-</RelativeLayout>
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:background="#ffffff"
+        android:gravity="center_vertical|center_horizontal"
+        android:id="@+id/linearLayout9"
+        android:layout_marginTop="1dp"
+        android:paddingLeft="15dp"
+        android:paddingRight="10dp">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:text="姓名"
+            android:id="@+id/name1"
+            android:textSize="16dp"
+            android:layout_weight="1"
+            android:gravity="left|center_vertical" />
+
+        <EditText
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/textView17"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:text="高子中"
+            android:textSize="14dp"
+            android:layout_weight="1"
+            android:gravity="right"
+            android:focusable="false"
+            android:focusableInTouchMode="false"
+            android:editable="false" />
+
+        <ImageView
+            android:layout_width="35dp"
+            android:layout_height="35dp"
+            android:id="@+id/imageView19"
+            android:src="@drawable/after" />
+    </LinearLayout>
+</LinearLayout>
