--- a/app/src/main/res/layout/activity_user__info.xml
+++ b/app/src/main/res/layout/activity_user__info.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context="cn.a1949science.www.bookshare.User_Info"
     android:background="#ebecf0">
 
@@ -22,42 +23,34 @@
             android:layout_alignParentStart="true" />
     </RelativeLayout>
 
-    <LinearLayout
+    <RelativeLayout
         android:orientation="horizontal"
         android:layout_width="match_parent"
-        android:layout_height="300px"
+        android:layout_height="100dp"
         android:background="#ffffff"
         android:gravity="center_vertical"
         android:weightSum="1"
         android:onClick="goToUserInfo"
-        android:layout_below="@+id/relativeLayout2"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginTop="40px"
+        android:layout_marginTop="20dp"
         android:id="@+id/linearLayout"
         android:paddingLeft="15dp"
         android:paddingRight="10dp">
 
         <ImageView
-            android:layout_width="200px"
-            android:layout_height="200px"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
             android:id="@+id/imageView9"
             android:layout_marginLeft="50dp"
             android:src="@drawable/favicon" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            android:id="@+id/textView3"
-            android:layout_weight="1" />
-
         <ImageView
-            android:layout_width="100px"
-            android:layout_height="100px"
+            android:layout_width="35dp"
+            android:layout_height="35dp"
             android:id="@+id/imageView10"
-            android:src="@drawable/after" />
-    </LinearLayout>
+            android:src="@drawable/after"
+            android:layout_alignBottom="@+id/imageView9"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true" />
+    </RelativeLayout>
 
     <LinearLayout
         android:orientation="horizontal"
@@ -65,10 +58,7 @@
         android:layout_height="50dp"
         android:background="#ffffff"
         android:gravity="center_vertical|center_horizontal"
-        android:layout_below="@+id/linearLayout"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginTop="2px"
+        android:layout_marginTop="1dp"
         android:id="@+id/linearLayout2"
         android:paddingLeft="15dp"
         android:paddingRight="10dp">
@@ -94,8 +84,8 @@
             android:gravity="center_vertical|right" />
 
         <ImageView
-            android:layout_width="100px"
-            android:layout_height="100px"
+            android:layout_width="35dp"
+            android:layout_height="35dp"
             android:id="@+id/imageView11"
             android:src="@drawable/after" />
     </LinearLayout>
@@ -106,10 +96,7 @@
         android:layout_height="50dp"
         android:background="#ffffff"
         android:gravity="center_vertical|center_horizontal"
-        android:layout_below="@+id/linearLayout2"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginTop="2px"
+        android:layout_marginTop="1dp"
         android:onClick="goToDetailInfo"
         android:paddingLeft="15dp"
         android:paddingRight="10dp">
@@ -125,9 +112,36 @@
             android:gravity="left|center_vertical" />
 
         <ImageView
-            android:layout_width="100px"
-            android:layout_height="100px"
+            android:layout_width="35dp"
+            android:layout_height="35dp"
             android:id="@+id/imageView12"
             android:src="@drawable/after" />
     </LinearLayout>
-</RelativeLayout>
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:background="#ffffff"
+        android:layout_marginTop="1dp"
+        android:gravity="center_vertical|center_horizontal"
+        android:onClick="goToEditPassword"
+        android:paddingLeft="15dp"
+        android:paddingRight="10dp">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:text="修改密码"
+            android:id="@+id/textView5"
+            android:textSize="16dp"
+            android:layout_weight="1"
+            android:gravity="left|center_vertical" />
+
+        <ImageView
+            android:layout_width="35dp"
+            android:layout_height="35dp"
+            android:id="@+id/imageView18"
+            android:src="@drawable/after" />
+    </LinearLayout>
+</LinearLayout>
