--- a/app/src/main/res/layout/activity_edit_password.xml
+++ b/app/src/main/res/layout/activity_edit_password.xml
@@ -6,6 +6,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:gravity="center_horizontal"
+    android:background="#ebecf0"
     tools:context="cn.a1949science.www.bookshare.EditPassword">
     <RelativeLayout
         android:layout_width="match_parent"
