--- a/app/src/main/res/layout/activity_menu_page.xml
+++ b/app/src/main/res/layout/activity_menu_page.xml
@@ -94,7 +94,7 @@
         android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:layout_marginTop="2px"
+        android:layout_marginTop="1dp"
         android:background="#ffffff"
         android:gravity="center_vertical|center_horizontal"
         android:paddingLeft="10dp"
@@ -123,7 +123,7 @@
         android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:layout_marginTop="2px"
+        android:layout_marginTop="1dp"
         android:background="#ffffff"
         android:gravity="center_vertical|center_horizontal"
         android:paddingLeft="10dp"
@@ -153,7 +153,7 @@
         android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:layout_marginTop="2px"
+        android:layout_marginTop="1dp"
         android:background="#ffffff"
         android:gravity="center_vertical|center_horizontal"
         android:id="@+id/advice"
