--- a/app/src/main/res/layout/booklist_item.xml
+++ b/app/src/main/res/layout/booklist_item.xml
@@ -4,14 +4,16 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="#ffffff">
+
     <ImageView
         android:id="@+id/image"
-        android:layout_width="400px"
-        android:layout_height="400px"
+        android:layout_width="120dp"
+        android:layout_height="120dp"
         android:paddingLeft="10dp"/>
+
     <LinearLayout
-        android:layout_width="680px"
-        android:layout_height="400px"
+        android:layout_width="0dp"
+        android:layout_height="120dp"
         android:orientation="vertical"
         android:layout_marginLeft="-50px"
         android:layout_weight="1">
@@ -19,17 +21,17 @@
             android:id="@+id/book"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="18dp"
+            android:textSize="18sp"
             android:textColor="#000"
-            android:layout_marginTop="80px"
+            android:layout_marginTop="24dp"
             android:layout_gravity="center_horizontal" />
         <TextView
             android:id="@+id/writer"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="14dp"
+            android:textSize="14sp"
             android:textColor="#555252"
-            android:layout_marginTop="100px"
+            android:layout_marginTop="30dp"
             android:layout_gravity="bottom|center_horizontal" />
     </LinearLayout>
 </LinearLayout>
