--- a/app/src/main/res/layout/activity_edit_password.xml
+++ b/app/src/main/res/layout/activity_edit_password.xml
@@ -35,8 +35,8 @@
             android:id="@+id/oldPassword"
             android:hint="请输入旧密码"
             android:selectAllOnFocus="true"
-            android:inputType="numberPassword"
-            android:layout_weight="1" />
+            android:layout_weight="1"
+            android:inputType="textPassword" />
     </LinearLayout>
     <LinearLayout
         android:orientation="horizontal"
@@ -50,7 +50,7 @@
             android:id="@+id/newPassword1"
             android:hint="请设置新密码"
             android:selectAllOnFocus="true"
-            android:inputType="numberPassword" />
+            android:inputType="textPassword" />
     </LinearLayout>
 
     <LinearLayout
@@ -65,7 +65,7 @@
             android:id="@+id/newPassword2"
             android:hint="请再次设置新密码"
             android:selectAllOnFocus="true"
-            android:inputType="numberPassword" />
+            android:inputType="textPassword" />
     </LinearLayout>
     <Button
         style="?android:attr/buttonStyleSmall"
