--- a/app/src/main/res/layout/activity_advice__page.xml
+++ b/app/src/main/res/layout/activity_advice__page.xml
@@ -33,7 +33,8 @@
         android:layout_marginTop="12dp"
         android:layout_below="@+id/relativeLayout"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:textColorLink="@android:color/background_dark" />
 
     <Button
         android:layout_width="match_parent"
