--- a/app/src/main/res/layout/activity_register_page.xml
+++ b/app/src/main/res/layout/activity_register_page.xml
@@ -14,7 +14,7 @@
         android:layout_height="55dp">
 
         <EditText
-            android:layout_width="300dp"
+            android:layout_width="0dp"
             android:layout_height="55dp"
             android:ems="10"
             android:id="@+id/name"
@@ -29,7 +29,7 @@
         android:layout_height="55dp" >
 
         <EditText
-            android:layout_width="300dp"
+            android:layout_width="0dp"
             android:layout_height="55dp"
             android:ems="10"
             android:id="@+id/gender"
@@ -47,7 +47,7 @@
         android:layout_height="55dp" >
 
         <EditText
-            android:layout_width="300dp"
+            android:layout_width="0dp"
             android:layout_height="55dp"
             android:ems="10"
             android:id="@+id/school"
@@ -83,7 +83,7 @@
         android:layout_height="55dp" >
 
         <EditText
-            android:layout_width="300dp"
+            android:layout_width="0dp"
             android:layout_height="55dp"
             android:ems="10"
             android:id="@+id/Class"
@@ -98,10 +98,7 @@
     <LinearLayout
         android:orientation="horizontal"
         android:layout_width="300dp"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/linearLayout13"
-        android:layout_alignLeft="@+id/linearLayout13"
-        android:layout_alignStart="@+id/linearLayout13" >
+        android:layout_height="wrap_content">
 
         <TextView
             android:layout_width="wrap_content"
@@ -113,12 +110,13 @@
             android:id="@+id/textView24" />
 
         <EditText
-            android:layout_width="300dp"
+            android:layout_width="0dp"
             android:layout_height="55dp"
             android:ems="10"
             android:id="@+id/phoneNum"
             android:hint="请输入手机号"
             android:paddingLeft="16dp"
+            android:maxLength="11"
             android:selectAllOnFocus="true"
             android:inputType="phone"
             android:layout_weight="1" />
@@ -129,27 +127,19 @@
         android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:weightSum="1"
-        android:layout_above="@+id/login"
-        android:layout_alignLeft="@+id/login"
-        android:layout_alignStart="@+id/login"
         android:id="@+id/linearLayout14">
 
         <EditText
-            android:layout_width="185dp"
+            android:layout_width="0dp"
             android:layout_height="55dp"
             android:ems="10"
+            android:maxLength="6"
             android:id="@+id/code"
             android:hint="请输入验证码"
             android:paddingLeft="16dp"
             android:selectAllOnFocus="true"
-            android:layout_centerHorizontal="true"
             android:layout_weight="1"
             android:inputType="number" />
-
-        <FrameLayout
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_weight="1"></FrameLayout>
 
         <Button
             style="?android:attr/buttonStyleSmall"
@@ -167,7 +157,7 @@
         android:layout_height="55dp" >
 
         <EditText
-            android:layout_width="300dp"
+            android:layout_width="0dp"
             android:layout_height="55dp"
             android:ems="10"
             android:id="@+id/password"
@@ -183,7 +173,7 @@
         android:layout_height="55dp" >
 
         <EditText
-            android:layout_width="300dp"
+            android:layout_width="0dp"
             android:layout_height="55dp"
             android:ems="10"
             android:id="@+id/password2"
@@ -199,10 +189,7 @@
         android:layout_height="55dp"
         android:text="确认注册"
         android:id="@+id/registerOk"
-        android:textSize="20dp"
-        android:layout_below="@+id/login"
-        android:layout_alignLeft="@+id/login"
-        android:layout_alignStart="@+id/login" />
+        android:textSize="20sp" />
 
 </LinearLayout>
 
