完成借书过程

--- a/app/src/main/res/layout/activity_book__info.xml
+++ b/app/src/main/res/layout/activity_book__info.xml
@@ -155,7 +155,8 @@
                 android:gravity="center_vertical"
                 android:paddingLeft="15dp"
                 android:paddingRight="10dp"
-                android:id="@+id/owner">
+                android:id="@+id/owner"
+                android:clickable="false">
 
                 <TextView
                     android:layout_width="40dp"
