--- a/app/src/main/res/layout/activity_home__page.xml
+++ b/app/src/main/res/layout/activity_home__page.xml
@@ -54,6 +54,26 @@
 
                 </RelativeLayout>
 
+                 <Button
+                     android:layout_width="55dp"
+                     android:layout_height="40dp"
+                     android:text="借入"
+                     android:id="@+id/borrowBtn"
+                     android:layout_gravity="right|bottom"
+                     android:layout_marginRight="30dp"
+                     android:layout_marginBottom="190dp"
+                     android:visibility="gone"/>
+
+                <Button
+                    android:layout_width="55dp"
+                    android:layout_height="40dp"
+                    android:text="借出"
+                    android:id="@+id/loanBtn"
+                    android:layout_gravity="right|bottom"
+                    android:layout_marginRight="30dp"
+                    android:layout_marginBottom="190dp"
+                    android:visibility="gone"/>
+
                 <Button
                     android:layout_width="55dp"
                     android:layout_height="40dp"
@@ -62,7 +82,7 @@
                     android:layout_gravity="right|bottom"
                     android:layout_marginRight="30dp"
                     android:layout_marginBottom="150dp"
-                    android:visibility="gone" />
+                    android:visibility="gone"/>
 
                 <Button
                     android:layout_width="55dp"
