--- a/app/src/main/res/layout/raturning_yes.xml
+++ b/app/src/main/res/layout/raturning_yes.xml
@@ -10,8 +10,8 @@
         android:layout_width="wrap_content"
         android:layout_height="100dp"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="截止时间：2017.1.1.13:00"
-        android:id="@+id/textView21"
+        android:text="@string/returnTime"
+        android:id="@+id/returnTime"
         android:textSize="20sp"
         android:gravity="center_vertical|center_horizontal" />
 </LinearLayout>
