--- a/app/src/main/res/layout/activity_home__page.xml
+++ b/app/src/main/res/layout/activity_home__page.xml
@@ -57,11 +57,21 @@
                  <Button
                      android:layout_width="55dp"
                      android:layout_height="40dp"
+                     android:text="收书"
+                     android:id="@+id/receiveBtn"
+                     android:layout_gravity="right|bottom"
+                     android:layout_marginRight="30dp"
+                     android:layout_marginBottom="270dp"
+                     android:visibility="gone"/>
+
+                 <Button
+                     android:layout_width="55dp"
+                     android:layout_height="40dp"
                      android:text="借入"
                      android:id="@+id/borrowBtn"
                      android:layout_gravity="right|bottom"
                      android:layout_marginRight="30dp"
-                     android:layout_marginBottom="190dp"
+                     android:layout_marginBottom="230dp"
                      android:visibility="gone"/>
 
                 <Button
