收藏，看过基本完成

--- a/app/src/main/res/layout/activity_my_like.xml
+++ b/app/src/main/res/layout/activity_my_like.xml
@@ -50,8 +50,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text="11本"
-            android:id="@+id/textView17"
+            android:id="@+id/count"
             android:layout_marginRight="15dp"
             android:layout_marginEnd="15dp"
             android:layout_alignTop="@+id/textView15"
