加入昵称、头像

--- a/app/src/main/res/layout/activity_app_start.xml
+++ b/app/src/main/res/layout/activity_app_start.xml
@@ -4,6 +4,6 @@
     android:id="@+id/activity_app_start"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="cn.a1949science.www.bookshare.AppStart">
+    tools:context="cn.a1949science.www.bookshare.ui.AppStart">
 
 </RelativeLayout>
