--- a/app/src/main/res/layout/activity_edit_password.xml
+++ b/app/src/main/res/layout/activity_edit_password.xml
@@ -7,7 +7,7 @@
     android:orientation="vertical"
     android:gravity="center_horizontal"
     android:background="#ebecf0"
-    tools:context="cn.a1949science.www.bookshare.EditPassword">
+    tools:context="cn.a1949science.www.bookshare.ui.EditPassword">
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="55dp"
