--- a/app/src/main/res/layout/activity_login__page.xml
+++ b/app/src/main/res/layout/activity_login__page.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="cn.a1949science.www.bookshare.Login_Page"
+    tools:context="cn.a1949science.www.bookshare.ui.Login_Page"
     android:gravity="center_horizontal"
     android:background="@mipmap/login">
 
