--- a/app/src/main/res/layout/activity_book__info.xml
+++ b/app/src/main/res/layout/activity_book__info.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="cn.a1949science.www.bookshare.Book_detail"
+    tools:context="cn.a1949science.www.bookshare.ui.Book_detail"
     android:background="#ebecf0">
 
     <RelativeLayout
