--- a/app/src/main/res/layout/activity_home__page.xml
+++ b/app/src/main/res/layout/activity_home__page.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="cn.a1949science.www.bookshare.Home_Page"
+    tools:context="cn.a1949science.www.bookshare.ui.Home_Page"
     android:background="#ebecf0"
     android:id="@+id/home__page">
 
