--- a/app/src/main/res/layout/activity_sharing.xml
+++ b/app/src/main/res/layout/activity_sharing.xml
@@ -5,7 +5,7 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="cn.a1949science.www.bookshare.Sharing"
+    tools:context="cn.a1949science.www.bookshare.ui.Sharing"
     android:background="#ebecf0">
 
     <ImageView
